--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 .form-container{
     position: absolute;
     top: 15vh;    
-    
-    padding:20px;
+    padding:10%;
     font-size:italic;
     background-color: white;
     color:#000;
-    border: 1px solid #d0d0d0;     
+    border: 1px solid #d0d0d0;    
+    left: auto;
+    right: auto;
+    
+    width: 100%;
 }
 .sign{
     position: absolute;
@@ -15,11 +18,10 @@
     align-content: center;
     width: 100%;
 }
-.bg{
-    background: url("../images/fondo.jpg") no-repeat;
+.container-fluid{
     width: 100%;
-    height: 100vh;  
 }
+
 .send{
     float: right;
 }
@@ -28,7 +30,8 @@
     color: black;
 }
 .button-login{
-position: relative;
+    position: relative;
+    
 
 }
 .bt{
