--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,16 @@
     border: 1px solid #d0d0d0;    
     left: auto;
     right: auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px #000;  
+}
+
+.container-fluid{
     
     width: 100%;
-}
-.sign{
-    position: absolute;
-    top: 7vh;
-    text-align: center;
-    align-content: center;
-    width: 100%;
-}
+    height: 100vh;
+   }
+
 .container-fluid{
     width: 100%;
 }
@@ -34,8 +34,16 @@
     
 
 }
-.bt{
+.btno{
+    border-radius: 10px;
+    box-shadow: 0px 0px 2px 0px #000;
+    width: 100%;
+    background: #cc346c; 
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px 0px #000; 
     
+}
+.bt{    
     border-radius: 10px;
     box-shadow: 0px 0px 2px 0px #000;
     width: 100%;
