--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     right: auto;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px #000;  
+    width: 100%;
 }
 
 .container-fluid{
@@ -40,7 +41,7 @@
     width: 100%;
     background: #cc346c; 
     border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px #000; 
+    
     
 }
 .bt{    
