--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,40 @@
     box-shadow: 0px 0px 10px 0px #000;  
     width: 100%;
 }
+.form-containe{
+    position: absolute;
+    top: 10vh;    
+    padding:10%;
+    font-size:italic;
+    background-color: white;
+    color:#000;
+    border: 1px solid #d0d0d0;    
+    left: auto;
+    right: auto;
+    border-radius: 10px;
+    
+    width: 100%;
+}
+.all{
+ width: 100%;
+ height: 100%;
+  /*IMPORTANTE*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  margin: auto;
+}
+.center-box{
 
+    width: 70%;
+    margin: auto;
+    text-align: justify;
+    padding: 12px;
+    margin-bottom: 20px;
+}
+    
+}
 .container-fluid{
     
     width: 100%;
