--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,7 +1,6 @@
 .hi{
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #000;  
-    width: 80%;
+    border-radius: 7px;
+    box-shadow: 0px 0px 5px 0px #000;
     left: auto;
     right: auto ;
     width: 70%;
@@ -22,4 +21,8 @@
 }
 body{
     background: url("../asset/fondo.jpg");
+}
+.btnn{
+    border-radius: 10px;
+    box-shadow: 0px 0px 1px 0px red;
 }
