--- a/css/operadores.css
+++ b/css/operadores.css
@@ -1,4 +1,13 @@
+body{
+    background: url(../asset/fondo.jpg) repeat;
+}
+.bg{
+   
+    width: 100%;
+    height: 100vh;  
+}
 .hi{
+    top: 15vh;
     border-radius: 7px;
     box-shadow: 0px 0px 5px 0px #000;
     left: auto;
@@ -9,16 +18,4 @@
     padding: 12px;
     margin-bottom: 20px;
     background: white;
-}
-.bg{
-   
-    width: 100%;
-    height: 100vh;  
-}
-.down{
-   position: relative;
-    top: 10vh;
-}
-body{
-    background: url("../asset/fondo.jpg");
 }
