--- a/css/resultados.css
+++ b/css/resultados.css
@@ -1,24 +1,26 @@
-.hi{
-    border-radius: 7px;
-    box-shadow: 0px 0px 5px 0px #000;
-    left: auto;
-    right: auto ;
-    width: 70%;
-    margin: auto;
-    text-align: justify;
-    padding: 12px;
-    margin-bottom: 20px;
-    background: white;
+body{
+    background: url(../asset/fondo.jpg) repeat;
 }
 .bg{
    
     width: 100%;
     height: 100vh;  
 }
-.down{
-   position: relative;
-    top: 10vh;
+.hi{
+    top: 30vh;
+    border-radius: 7px;
+    box-shadow: 0px 0px 5px 0px #000;
+    left: auto;
+    right: auto ;
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    padding: 12px;
+    margin-bottom: 20px;
+    background: white;
+    
 }
-body{
-    background: url("../asset/fondo.jpg");
+.text{
+
+    font-size: 200%%;
 }
