--- a/css/operadores.css
+++ b/css/operadores.css
@@ -1,10 +1,9 @@
-body{
-    background: url(../asset/fondo.jpg) repeat;
-}
+
 .bg{
    
     width: 100%;
     height: 100vh;  
+    background: url(../asset/fondo.jpg) no-repeat;
 }
 .hi{
     top: 15vh;
