--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,12 @@
     width: 100%;
 }
 .bg{
-    background: url("../asset/fondo.jpg") no-repeat;
+    
     width: 100%;
     height: 100vh;  
+}
+body{
+    background: url(../asset/fondo.jpg) repeat;
 }
 .center{
 position: fixed;
