--- a/css/operadores.css
+++ b/css/operadores.css
@@ -3,7 +3,7 @@
    
     width: 100%;
     height: 100vh;  
-    background: url(../asset/fondo.jpg) no-repeat;
+    background: url(../asset/fondo.jpg) ;
 }
 .hi{
     top: 8vh;
