--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,16 @@ width: 100%;
     top: 10px;
     text-align: center;
 }
+.hi{
+    top: 8vh;
+    border-radius: 7px;
+    box-shadow: 0px 0px 5px 0px #000;
+    left: auto;
+    right: auto ;
+    width: 70%;
+    margin: auto;
+    text-align: justify;
+    padding: 20px;
+    margin-bottom: 20px;
+    background: white;
+}
