--- a/css/operadores.css
+++ b/css/operadores.css
@@ -5,7 +5,9 @@
     height: 100vh;  
     
 }
-
+body{
+    background: url("../asset/fondo2.jpg");
+}
 .hi{
     
     border-radius: 7px;
@@ -18,6 +20,7 @@
     padding: 38px;
     margin-bottom: 20px;
     background: white;
+    top: 50px;
 }
 .cente{     
     width: 10%;
