--- a/css/resultados.css
+++ b/css/resultados.css
@@ -4,7 +4,7 @@
     height: 100vh;  
 }
 .hi{
-    top: 15vh;
+    
     border-radius: 7px;
     box-shadow: 0px 0px 5px 0px #000;
     left: auto;
@@ -20,7 +20,7 @@
 .text{
     font-size: 200%;
 }
-.logo{
-    position: relative;
-    top: 10px;
+
+body{
+    background: url("../asset/fondo2.jpg");
 }
